# django-florist-app

./: .gitignore  .pre-commit-config.yaml  README.md  local.yml  pyproject.toml
.envs/.local/: .env.sample
compose/local/django/: Dockerfile  entrypoint
src/apps/: conftest.py
src/apps/jwt_auth/: apps.py  middleware.py  schema.py  urls.py
src/apps/products/: admin.py  apps.py  filters.py  mixins.py  models.py  schema.py  serializers.py  signals.py  urls.py  views.py
src/apps/products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_remove_product_size_description_and_more.py  0003_alter_category_is_active_alter_category_name_and_more.py  0003_remove_product_category_product_category.py  0004_category_description_category_image.py  0004_rename_category_product_categories.py  0005_alter_category_slug_alter_product_slug.py  0005_alter_product_categories.py  0006_alter_category_parent_category.py  0006_alter_category_slug_alter_product_slug.py  0007_alter_category_is_active_alter_product_description_and_more.py
src/apps/products/tests/: factories.py  test_filters.py  test_models.py  test_signals.py  test_views.py
src/common/: views.py
src/config/: settings.py  urls.py
